Added content and assets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,61 @@
     <script src="sign-up-form.js" defer></script>
 </head>
 <body>
-    
+    <div class="body">
+        <div class="left">
+            <img src="./assets/leaf.jpg" alt="Leafy Background" class="background">
+            <div class="logoBackground">
+                <img src="./assets/odin-logo.png" alt="Odin Logo" class="logo">
+                <p>ODIN</p>
+            </div>
+            <p class="credit">
+                Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+                Halie West</a>
+                 on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+                Unsplash</a>
+            </p>
+        </div>
+        <div class="right">
+            <div class="topContainer">
+                <p>This is not a real online service! You know you need something like this in your life to
+                    help you realize your deepest dreams. Sign up <em>now</em> to get started.
+                    <br>
+                    <br>You <em>know</em> you want to.</p>
+            </div>
+            <div class="middleContainer">
+                <p>Let's do this</p>
+                <div class="formList">
+                    <div class="inputLabelPair">
+                        <input id="firstName">
+                        <label for="firstName">FIRST NAME</label>
+                    </div>
+                    <div class="inputLabelPair">
+                        <input id="lastName">
+                        <label for="lastName">LAST NAME</label>
+                    </div>
+                    <div class="inputLabelPair">
+                        <input id="email">
+                        <label for="email">EMAIL</label>
+                    </div>
+                    <div class="inputLabelPair">
+                        <input id="phone">
+                        <label for="phone">PHONE NUMBER</label>
+                    </div>
+                    <div class="inputLabelPair">
+                        <input id="password">
+                        <label for="password">PASSWORD</label>
+                    </div>
+                    <div class="inputLabelPair">
+                        <input id="confirmPassword">
+                        <label for="confirmPassword">CONFIRM PASSWORD</label>
+                    </div>
+                </div>
+            </div>
+            <div clas="bottomContainer">
+                <button class="signUp">Create Account</button>
+                <p>Already have an account? <a>Log in</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
