Styled left panel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="./assets/leaf.jpg" alt="Leafy Background" class="background">
             <div class="logoBackground">
                 <img src="./assets/odin-logo.png" alt="Odin Logo" class="logo">
-                <p>ODIN</p>
+                <p class="logoText">ODIN</p>
             </div>
             <p class="credit">
                 Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
@@ -24,8 +24,9 @@
         </div>
         <div class="right">
             <div class="topContainer">
-                <p>This is not a real online service! You know you need something like this in your life to
-                    help you realize your deepest dreams. Sign up <em>now</em> to get started.
+                <p class="hero">This is not a real online service! You know you need something like this in your life to
+                    help you realize your deepest dreams. 
+                    <br>Sign up <em>now</em> to get started.
                     <br>
                     <br>You <em>know</em> you want to.</p>
             </div>
