Styled right panel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Sign Up Form</title>
     <link rel="stylesheet" href="style.css">
     <script src="sign-up-form.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body">
@@ -31,7 +34,7 @@
                     <br>You <em>know</em> you want to.</p>
             </div>
             <div class="middleContainer">
-                <p>Let's do this</p>
+                <p class="formHeader">Let's do this</p>
                 <div class="formList">
                     <div class="inputLabelPair">
                         <input id="firstName">
@@ -59,9 +62,9 @@
                     </div>
                 </div>
             </div>
-            <div clas="bottomContainer">
+            <div class="bottomContainer">
                 <button class="signUp">Create Account</button>
-                <p>Already have an account? <a>Log in</a></p>
+                <p class="loginText">Already have an account? <a>Log in</a></p>
             </div>
         </div>
     </div>
