Added link attribute

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="bottomContainer">
                 <button class="signUp">Create Account</button>
-                <p class="loginText">Already have an account? <a>Log in</a></p>
+                <p class="loginText">Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
     </div>
