Added attribute to forms

--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
                 <p class="formHeader">Let's do this</p>
                 <div class="formList">
                     <div class="inputLabelPair">
-                        <input id="firstName">
+                        <input id="firstName" name="firstName">
                         <label for="firstName">FIRST NAME</label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="lastName">
+                        <input id="lastName" name="lastName">
                         <label for="lastName">LAST NAME</label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="email">
+                        <input id="email" name="email">
                         <label for="email">EMAIL</label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="phone">
+                        <input id="phone" name="phone">
                         <label for="phone">PHONE NUMBER</label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="password">
+                        <input id="password" name="password">
                         <label for="password">PASSWORD</label>
                     </div>
                     <div class="inputLabelPair">
