Added clientside password match check
Verifies that the user entered password and confirm password are identical
Prompts the user with an error if the entered passwords do not match

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                         <label for="phone">PHONE NUMBER</label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="password" name="password">
+                        <input id="password" type="password" name="password">
                         <label for="password">PASSWORD</label>
+                        <label for="password" id="errorText"></label>
                     </div>
                     <div class="inputLabelPair">
-                        <input id="confirmPassword">
+                        <input id="confirmPassword" type="password">
                         <label for="confirmPassword">CONFIRM PASSWORD</label>
                     </div>
                 </div>
